Some refactoring to make use of the Locator api.